# python-mosaic

./: .bandit.yaml  .gitignore  .gitlab-ci.yml  GLOSSARY.md  LICENSE  Makefile  README.md  find_duplicates.sh  mosaic.py  mosaic_lib.py  pyproject.toml
.github/workflows/: python.yaml
conductor/: architecture.md  modernize-mosaic.md
doc/: architecture.md  performance-bottlenecks.md
mosaic/: __init__.py  __main__.py  lib.py
tests/: test_generation.py  test_input_image.py  test_mosaic_grid.py  test_mosaic_lib.py  test_tile_library.py  test_tile_library_parallel.py  test_tile_processor.py
