[project]
name = "mosaic"
version = "0.1.0"
description = "Mosaic project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
]

[project.scripts]
mosaic = "mosaic.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 80
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "RUF", "ANN", "D", "N", "B", "S", "C4"]
ignore = ["D100", "D104", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN", "D103"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pdoc>=16.0.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-html>=4.2.0",
    "ruff>=0.15.12",
]
